# tesseract-rs

src/: lib.rs
src/plumbing/: mod.rs  pix.rs  tess_base_api.rs  tesseract_text.rs
tesseract-plumbing/: Cargo.toml  README.md
tesseract-plumbing/src/: lib.rs
