[package]
name = "tesseract-plumbing"
version = "0.1.0"
authors = ["Chris Couzens <ccouzens@gmail.com>"]
edition = "2018"
repository    = "https://github.com/antimatter15/tesseract-rs"
license       = "MIT"
description   = "Low-level bindings for Tesseract OCR"


[dependencies]
leptonica-sys = "0.3.0"
tesseract-sys = "0.5.1"
